display e data e hora

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         [type=reset],
         [type=submit],
         button {
-            -webkit-appearance: button
+            --webkit-appearance: button
         }
 
         [type=button]::-moz-focus-inner,
@@ -150,7 +150,7 @@
         }
 
         [type=search] {
-            -webkit-appearance: textfield;
+            --webkit-appearance: textfield;
             outline-offset: -2px
         }
 
@@ -1959,8 +1959,9 @@
 
         </div>
     </div>
-    <script src="scripts/Controller/CalcController.js"></script>
+    <script src="./scripts/Controller/CalcController.js"></script>
     <script src="scripts/Calculator.js"></script>
+    
 </body>
 
 </html>
